# Language-Model-SAEs

./: .cursorignore  .cursorrules  .gitignore  .gitmodules  .pre-commit-config.yaml  404.html  API_usage.ipynb  BATCH_REPLACEMENT_GUIDE.md  CHANGELOG.md  CIRCUIT_EXTRACTION_ANALYSIS.md  CIRCUIT_VISUALIZATION_REFACTOR.md  CLAUDE.md  CLTREADME.md  Makefile  README  README.md  REFACTORING_PROGRESS.md  ROBUSTNESS_FEATURES.md  analyze.sh  analyze_lorsa_bigger.sh  analyze_mlp.sh  analyze_sae_k30_e16.sh  analyze_tc_bigger.sh  analyze_tc_k128_e128.sh  analyze_tc_k128_e64.sh  analyze_tc_k256_e128.sh  analyze_tc_k30_e16.sh  analyze_tc_k64_e32.sh  autointerp.ipynb  bugs.md  chess-n-to-push.bundle  convert_and_save_weights.py  copy_folders.sh  copy_pruned_files.sh  delete.sh  dict_analyze_example.py  docker-compose.yml  entropy_analyze.sh  eval.sh  generate_activations.py  (+42 more)
.claude/: settings.local.json
.conda/conda-meta/: _libgcc_mutex-0.1-main.json  _openmp_mutex-5.1-1_gnu.json  bzip2-1.0.8-h5eee18b_6.json  ca-certificates-2024.3.11-h06a4308_0.json  history  ld_impl_linux-64-2.38-h1181459_1.json  libffi-3.4.4-h6a678d5_1.json  libgcc-ng-11.2.0-h1234567_1.json  libgomp-11.2.0-h1234567_1.json  libstdcxx-ng-11.2.0-h1234567_1.json  libuuid-1.41.5-h5eee18b_0.json  ncurses-6.4-h6a678d5_0.json  openssl-3.0.13-h7f8727e_1.json  pip-24.0-py311h06a4308_0.json  python-3.11.9-h955ad1f_0.json  readline-8.2-h5eee18b_0.json  setuptools-69.5.1-py311h06a4308_0.json  sqlite-3.45.3-h5eee18b_0.json  tk-8.6.14-h39e8969_0.json  tzdata-2024a-h04d1e81_0.json  wheel-0.43.0-py311h06a4308_0.json  xz-5.4.6-h5eee18b_1.json  zlib-1.2.13-h5eee18b_1.json
.conda/etc/: aau_token
.cursor/rules/: sae_evaluation.mdc  sae_training.mdc  sparse_autoencoder_overview.mdc
.github/workflows/: bumpversion.yml  checks.yml  docker-publish.yml  docs.yml  publish.yml  ui-checks.yml  ui-ssr-checks.yml
55Taxonomy/: Kfeature.ipynb  detection_feature_top50_pawns_in_front_of_own_king.json  detection_features_pawn_front_of_king.ipynb  king_side_space.ipynb
TransformerLens/: __init__.py  hook_points.py  pyproject.toml  utils.py
TransformerLens/.devcontainer/: Dockerfile
TransformerLens/components/: __init__.py
TransformerLens/transformer_lens/: ActivationCache.py  HookedEncoder.py  HookedEncoderDecoder.py  HookedEvo2.py  HookedTransformer.py  HookedTransformerConfig.py  hook_points.py  loading_from_pretrained.py  utils.py
analyze-saes/: index.html
assets/: extra.css
atlases/[Cap]Move OwnKnight and check/: atlas_0.json  atlas_1.json
atlases/[Tgt]Target square/: atlas_0.json  atlas_1.json
atlases/[Thr]Opp. One-move mate threaten/: atlas_0.json  atlas_1.json
cases/: fen.txt
circuits/: BT4_win_or_go_home_k.json  merge_clerp.py
concepts/: index.html
configs/: analyze_entropy_example.yaml
core/: activation_dataset.py  activation_store.py  activation_store_theirs.py  config.py  database.py  evals.py  optim.py  runner.py  sae.py  sae_finetuning.py  sae_training.py  test.py  utils.py
core/activation/: activation_dataset.py  activation_source.py  activation_store.py  token_source.py
core/analysis/: attn_score.py  auto_interp.py  features_to_logits.py  input_feature_activations.py  (+1 more)
core/utils/: math.py  (+2 more)
distributed-guidelines/: index.html
docs/: analyze-saes.md  concepts.md  distributed-guidelines.md  index.md  style-guide.md  train-saes.md  walkthrough.md  workthrough.md  z_pattern_display_logic.md
examples/: README.md  analyze.py  analyze_pythia_sae.py  analyze_pythia_sae_with_pre_generated_activations.py  attribute_with_qk_trace.py  generate_activations.py  generate_pythia_activation_1d.py  generate_pythia_activation_2d.py  generate_pythia_acts.py  load_hf_model.py  load_saelens_model.py  loading_llamascope_saes.ipynb  replicate_llamascope_sae.sh  train.py  train_pythia.py  train_pythia_clt_topk.py  train_pythia_lorsa_topk.py  train_pythia_pre_generated_acts.py  train_pythia_sae.py  train_pythia_sae_batchtopk.py  train_pythia_sae_jumprelu.py  train_pythia_sae_topk.py  train_pythia_sae_with_pre_generated_activations.py  train_sae.py
graphs_tc/: sacrifice_the_queen_in3_k_4096_B.json  sacrifice_the_queen_k_4096_B.json  win_or_go_home.json  win_or_go_home_incorrect_k_negative_1024.json  win_or_go_home_k_1024.json  win_or_go_home_k_2048_G.json  win_or_go_home_k_4096_B.json  win_or_go_home_k_4096_G.json  win_or_go_home_q_1024.json
interaction_circuit/: f6g7_h3d7_reduction_0.1.csv  h3d7_top200_features.csv  h3h7_top200_features.csv
notebooks/: observe_feature_activation.ipynb  plot_metrics.ipynb
scripts/: README.md  analyze-pythia-crosscoders.py  feature_steering.py  gen_ref_pages.py  generate-pythia-activations-1d.py  policy_lens.py  results_to_database.py  trace_to_graph.py  train-pythia-crosscoders.py
search/: search_index.json
server/: .env.chat  .env.example  .env_CNN  .env_pythia  Dockerfile  activation.py  app copy.py  app.bak.py  app.py  app_bak.py  app_unsuccessful.py  circuit_annotations_api.py  circuit_interpretation.py  circuit_trace_defaults.py  circuits_service.py  config.py  constants.py  database.py  feature_entropy.py  global_weight.py  graph_feature_diffing.py  interaction.py  intervention.py  logit_lens.py  move_evaluation.py  patching.py  self_play.py  tactic_features.py  umap_utils.py  virtual_weight.py
server_old/: circuits_service.py  intervention.py  patching.py
shim/lm-saes/: README.md  pyproject.toml
shim/lm-saes/src/lm_saes/: __init__.py
src/: __init__.py
style-guide/: index.html
tests/: conftest.py  test_HookedTransformer.py  test_activation_source.py  test_clt.py  test_flash_attn.py
train-saes/: index.html
ui/: .cta.json  .env  .env.example  .eslintrc.cjs  README.md  backend_session_management.py  bun.lockb  cancel_session_endpoint.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui copy/: .eslintrc.cjs  bun.lockb
ui-ssr/: .cta.json  .gitignore  Dockerfile  README.md  eslint.config.js  package.json  tsconfig.json  vite.config.ts
ui_old/: .env.example  .gitignore  .prettierrc.cjs  bun.lockb  test-integration.html
(+1192 files in other folders)
